FS-fixed-elements-being-pushed-out-of-alignment-by-content

--- a/src/pages/transactions/components/ViewTransactions/ViewTransactions.scss
+++ b/src/pages/transactions/components/ViewTransactions/ViewTransactions.scss
@@ -9,16 +9,16 @@
 
     .sub-container-view-transactions-content {
         width: 100%;
-        height: 27.5rem; 
-    
+        height: 27.5rem;
+
         .container-content {
             height: 5rem;
-            display: flex; 
+            display: flex;
             margin-top: 1rem;
 
             .transaction-source {
                 height: 100%;
-                width: 37.5%;  
+                width: 40%;
                 display: flex;
                 align-items: center;
                 font-size: 0.65rem;
@@ -32,18 +32,20 @@
             }
 
             .transaction-details {
-                width: 73.5%;
+                width: 78.5%;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
 
                 p {
+                    width: 6.75rem;
                     font-size: 0.90rem;
                     color: $MedGrey;
                     font-weight: 300;
                 }
-
+                
                 #amount {
+                    text-align: right;
                     font-weight: 800;
                     color: $DarkGrey;
                 }
